Progress work.html

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br><br>
       Created the 20th December 2019
       <br>
-      Last update the 13th January 2020
+      Last update the 16 February 2020
     </p>
 
     </footer>
