--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
 	      <a class="my-name" href="index.html">Alexandra Demski</a>
 	      <input type=button onClick="document.getElementById('home').scrollIntoView();" class="btn-home" value="Home"/>
       	  <input type=button onClick="document.getElementById('introduction').scrollIntoView();" class="btn-abt" value="Intro"/>
-	      <input type=button onClick="document.getElementById('work').scrollIntoView();" class="btn-wrk" value="Work"/>
+	      <input type=button onClick="document.getElementById('my-work').scrollIntoView();" class="btn-wrk" value="Work"/>
 	      <input type=button onClick="accueil.html" class="btn-eng" value="Eng"/>
 	  </header>
 
@@ -23,7 +23,7 @@
 	  	<article id="home">
 	  		<div class="typewriter">
               <div class=rect>
-                  <p class="quote"><span>Pleasure in the job puts perfection in the work</span><br>- Aristotle -</p>
+                  <p class="quote"><span>Pleasure in the job puts perfection in the work</span><br>Aristotle</p>
               </div>
         </article>
 
@@ -41,13 +41,34 @@
 	        	</div>
         	<div class="my-softw">
         		<h4>My Environment</h4>
-        		<p><span>Softwares : </span>Sublime Text - Atom - Notepad++ - Python - Wampserver - Oracle VM - Oracle<br><br>
-	        	<span>Operating Systems : </span>Linux (Ubuntu, Arch Linux) - Windows (7,8,10)<br><br>
+        		<p><span>Softwares : </span>Sublime Text, Atom, Notepad++, Python, Wampserver, Oracle VM, Oracle, Github<br><br>
+	        	<span>Operating Systems : </span>Linux (Ubuntu, Arch Linux), Windows (7,8,10)<br><br>
+	        	<span>Office : </span>Office Pack (Word, Powerpoint, Excel, Publisher), LibreOffice Pack (Writer, Calc, Impress), WPS Office (Writer, Presentation, Spreadsheets)<br>
+	        	</p>
         	</div>
 
         </article>
 
         <div class="img-para-skill"></div>
+
+        <article id="my-work">
+        	<h3>My Work</h3>
+
+        	<!--<div class="projet">
+	        	<h3 class="date-work">30.04.2019</h3>
+	            <h4 class="name-work">Clever Oven</h4>
+	            <h5 class="keywords">Website - Python/HTML/CSS/JS/PHP - Teamwork - School</h5>
+	            <p class="info-work"></p>
+        	</div>
+
+            <div class="projet">
+	            <h3 class="date-work">20.12.2019</h3>
+		        <h4 class="name-work">The Snake Game</h4>
+		        <h5 class="keywords">Video Game - C89 - Teamwork - School</h5>
+		        <p class="info-work"></p>
+		    </div>-->
+
+        </article>
 
 	  </section>
 	  <footer>
@@ -58,7 +79,7 @@
 	    Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br><br>
 	    Created the 20th December 2019
 	    <br>
-	    Last update the 13th January 2020
+	    Last update the 16th February 2020
 	    </p>
 
     </footer>
