--- a/work.html
+++ b/work.html
@@ -54,19 +54,28 @@
         <article id="my-work">
         	<h3>My Work</h3>
 
-        	<!--<div class="projet">
+        	<div class="summary">
+        		<input type=button onClick="document.getElementById('clever').scrollIntoView();" class="btn-proj" value="Clever Oven"/>
+        		<input type=button onClick="document.getElementById('snake').scrollIntoView();" class="btn-proj" value="The Snake Game"/>
+        	</div>
+
+        	<div id="clever" class="projet">
 	        	<h3 class="date-work">30.04.2019</h3>
 	            <h4 class="name-work">Clever Oven</h4>
 	            <h5 class="keywords">Website - Python/HTML/CSS/JS/PHP - Teamwork - School</h5>
 	            <p class="info-work"></p>
+	            <a href="clever-oven-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+	            <a href="https://github.com/Felween/Clever-Oven" class="btn-code" target="_blank" download>See the Code</a>
         	</div>
 
-            <div class="projet">
+            <div id="snake" class="projet">
 	            <h3 class="date-work">20.12.2019</h3>
 		        <h4 class="name-work">The Snake Game</h4>
 		        <h5 class="keywords">Video Game - C89 - Teamwork - School</h5>
 		        <p class="info-work"></p>
-		    </div>-->
+		        <a href="snake-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+	            <a href="https://github.com/Felween/Snake-Game" class="btn-code" target="_blank" download>See the Code</a>
+		    </div>
 
         </article>
 
