--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </article>
 
     <div class="resume">
-      <a href="alexandra-demski-eng-cv.pdf" class="btn-cv" target="_blank" download>Download my Resume</a>
+      <a href="./doc/alexandra-demski-eng-cv.pdf" class="btn-cv" target="_blank" download>Download my Resume</a>
     </div>
 
   <!--WORK-->
@@ -126,14 +126,12 @@
 
           <h3>My Work</h3>
 
-          <div class="quote">Pleasure in the job puts perfection in the work<br>Aristotle</div>
-
           <div id="clever" class="projet">
             <h3 class="date-work">30.04.2019</h3>
               <h4 class="name-work">Clever Oven</h4>
               <h5 class="keywords">Website - Python/HTML/CSS/JS/PHP - Teamwork - School</h5>
               <p class="info-work">Clever Oven was a one year project realised during my last highschool year. The goal was to create a website for visually impaired people who struggle with cooking. Indeed, for many pre-prepared food, guidelines are written with a very small font. The website helps them with this everyday dutty by automatically setting their oven for a specific aliment saved on their account. The management of registred users' information uses python and php programs with the most sensitive information encrypted.</p>
-              <a href="clever-oven-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+              <a href="./doc/clever-oven-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
               <a href="https://github.com/Felween/Clever-Oven" class="btn-code" target="_blank" download>See the Code</a>
           </div>
 
@@ -142,7 +140,7 @@
             <h4 class="name-work">The Snake Game</h4>
             <h5 class="keywords">Video Game - C89 - Teamwork - School</h5>
             <p class="info-work">The Snake Game was one of my firsts projects during my two years degree. The instructions are very simple: the player controls a constantly moving snake which collects pellets in order to gain points and, at the same time, grow. The project must contain a snake game with a few more rules including a timer, a button to pause or exit the game and a score system. For the graphic aspect of the game, I use a rudimentary graphic library given by the university.</p>
-            <a href="snake-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+            <a href="./doc/snake-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
               <a href="https://github.com/Felween/Snake-Game" class="btn-code" target="_blank" download>See the Code</a>
         </div>
 
@@ -183,7 +181,7 @@
       Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br><br>
       Created the 20th December 2019
       <br>
-      Last update the 16 February 2020
+      Last update the 13th March 2020
     </p>
 
     </footer>
