--- a/accueil.html
+++ b/accueil.html
@@ -28,7 +28,7 @@
     <section>
 
         <article id="accueil">
-            <h1 class="hello">Bonjour & Bienvenu</h1>
+            <h1 class="hello">Bonjour & Bienvenue</h1>
             <div class="typewriter">
               <div class=rect>
                   <p class="typewriter-text">Je m'appelle <span>Alexandra Demski</span></p>
@@ -41,7 +41,7 @@
         <article id="about">
 
           <h3>A Propos</h3>
-          <p class="intro">Bienvenu sur mon Portfolio. Mon nom est Alexandra Demski et je suis actuellement une étudiante en Informatique à l'université Paris-Est Créteil à Fontainebleau où je prépare mon Diplôme Universitaire de Technologique. <br>Je suis à la recherche d'une formation en alternance pour l'année prochaine.</p>
+          <p class="intro">Bienvenue sur mon Portfolio. Mon nom est Alexandra Demski et je suis actuellement une étudiante en Informatique à l'université Paris-Est Créteil à Fontainebleau où je prépare mon Diplôme Universitaire de Technologie. <br>Je suis à la recherche d'une formation en alternance pour l'année prochaine.</p>
 
           <div class="content-about">
 
