--- a/accueil.html
+++ b/accueil.html
@@ -17,10 +17,10 @@
     <header class="menu">
       <a class="my-name" href="index.html">Alexandra Demski</a>
       <input type=button onClick="document.getElementById('accueil').scrollIntoView();" class="btn-home" value="Accueil"/>
-      <input type=button onClick="document.getElementById('about').scrollIntoView();" class="btn-abt" value="A Propos"/>
+      <input type=button onClick="document.getElementById('about').scrollIntoView();" class="btn-abt-fr" value="A Propos"/>
       <input type=button onClick="document.getElementById('my-work').scrollIntoView();" class="btn-wrk" value="Travaux"/>
-      <input type=button onClick="document.getElementById('contact').scrollIntoView();" class="btn-ctc-eng" value="Contacter"/>
-      <input type=button onClick="index.html" class="btn-eng" value="Fr"/>
+      <input type=button onClick="document.getElementById('contact').scrollIntoView();" class="btn-ctc" value="Contacter"/>
+      <a href="index.html" title="Accéder à la Version Anglaise" class="btn-eng">Fr</a>
     </header>
 
   <!--HOME-->
