--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type=button onClick="document.getElementById('about').scrollIntoView();" class="btn-abt" value="About"/>
       <input type=button onClick="document.getElementById('my-work').scrollIntoView();" class="btn-wrk" value="Work"/>
       <input type=button onClick="document.getElementById('contact').scrollIntoView();" class="btn-ctc-eng" value="Contact"/>
-      <input type=button onClick="accueil.html" class="btn-eng" value="Eng"/>
+      <a href="accueil.html" title="Access to French version" class="btn-eng">Eng</a>
     </header>
 
   <!--HOME-->
