Add project Sudoku

--- a/accueil.html
+++ b/accueil.html
@@ -135,7 +135,7 @@
               <a href="https://github.com/Felween/Clever-Oven" class="btn-code" target="_blank" download>Voir le Code</a>
           </div>
 
-            <div id="snake" class="projet">
+          <div id="snake" class="projet">
               <h3 class="date-work">20.12.2019</h3>
             <h4 class="name-work">Le Jeu du Serpent</h4>
             <h5 class="keywords">Jeux Vidéo - C89 - Travail de groupe - Scolaire</h5>
@@ -143,6 +143,15 @@
             <a href="./doc/snake-eng.pdf" class="btn-rapport" target="_blank" download>Voir le Rapport</a>
               <a href="https://github.com/Felween/Snake-Game" class="btn-code" target="_blank" download>Voir le Code</a>
         </div>
+
+        <div id="sudoku" class="projet">
+            <h3 class="date-work">10.04.2020</h3>
+              <h4 class="name-work">Sudoku</h4>
+              <h5 class="keywords">Application - Java - Individual - Scolaire</h5>
+              <p class="info-work">Le but du projet est de concevoir une interface conviviale pour la création et résolution de grille de Sudoku, un puzzle populaire qui consiste à remplir une grille selon une configuration de départs tout en respectant quelques règles simples. Une grille de Sudoku complète contient un chiffre entre 1 et 9 dans chaque cellule ainsi que un chiffre par colonne, ligne et région. Le projet doit fournir deux fonctionnalités : la création et la résolution. J'ai décidé d'ajouter une version automatique ainsi que manuelle pour chaque fonctionnalités. Les grilles sont enregistrées dans des fichiers avec l'extension .gri et peuvent être chargées ou modifiées par l'utilisateur.</p>
+              <a href="./doc/sudoku-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+              <a href="https://github.com/Felween/Sudoku-Game" class="btn-code" target="_blank" download>See the Code</a>
+          </div>
 
       </article>
 
