--- a/index.html
+++ b/index.html
@@ -135,14 +135,23 @@
               <a href="https://github.com/Felween/Clever-Oven" class="btn-code" target="_blank" download>See the Code</a>
           </div>
 
-            <div id="snake" class="projet">
-              <h3 class="date-work">20.12.2019</h3>
+          <div id="snake" class="projet">
+            <h3 class="date-work">20.12.2019</h3>
             <h4 class="name-work">The Snake Game</h4>
             <h5 class="keywords">Video Game - C89 - Teamwork - School</h5>
             <p class="info-work">The Snake Game was one of my firsts projects during my two years degree. The instructions are very simple: the player controls a constantly moving snake which collects pellets in order to gain points and, at the same time, grow. The project must contain a snake game with a few more rules including a timer, a button to pause or exit the game and a score system. For the graphic aspect of the game, I use a rudimentary graphic library given by the university.</p>
             <a href="./doc/snake-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
               <a href="https://github.com/Felween/Snake-Game" class="btn-code" target="_blank" download>See the Code</a>
-        </div>
+          </div>
+
+          <div id="sudoku" class="projet">
+            <h3 class="date-work">10.04.2020</h3>
+              <h4 class="name-work">Sudoku</h4>
+              <h5 class="keywords">Application - Java - Individual - School</h5>
+              <p class="info-work">The goal of the project was to create a user-friendly interface for designing or solving Sudoku grids, a famous puzzle game which requires the player to fill the grid respecting a starting configuration and some simple rules. A complete Sudoku grid has each cells completed with a number between 1 to 9 and each rows, columns and squares having all the numbers in. The project must provide two features : a solving option and a creating option. I decided to incorporate an automatic and manual version for both features. The grids are saved in a file with a .gri extension and can be loaded or changed by the user.</p>
+              <a href="./doc/sudoku-eng.pdf" class="btn-rapport" target="_blank" download>See the Report</a>
+              <a href="https://github.com/Felween/Sudoku-Game" class="btn-code" target="_blank" download>See the Code</a>
+          </div>
 
       </article>
 
