--- a/accueil.html
+++ b/accueil.html
@@ -190,39 +190,10 @@
       Icon réalisée par <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> à partir du site <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br><br>
       Crée le 20 Décembre 2019
       <br>
-      Dernière modification 13 Mars 2020
+      Dernière modification le 17 Avril 2020
     </p>
 
     </footer>
 
-    <script>
-
-    var slideIndex = 1;
-    showSlides(slideIndex);
-
-    function plusSlides(n)
-    {
-      showSlides(slideIndex += n);
-    }
-
-    function currentSlide(n)
-    {
-      showSlides(slideIndex = n);
-    }
-
-    function showSlides(n)
-    {
-      var i;
-      var slides = document.getElementsByClassName("my-slides");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
-    }
-
-    </script>
   </body>
 </html>
