--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/><!--devices-->
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 		<link rel="stylesheet" href="./style.css"/>
-		<link rel="shortcut icon" href="./img/favicon.ico"/>
 	<title>Alexandra Demski</title>
 </head>
 <style type="text/css">
@@ -139,6 +138,7 @@ function view_page(name){
 					<input class="input email" type="text" name="object" placeholder="Enter the Object"><br><br>
 					<textarea class="area" name="message" form="msg" placeholder="Enter the Message" rows=5></textarea><br><br><br>
 					<button class="btn-sub" type="submit">Send Message</button>
+				</form>
 			</article>
 
 		</section>
