--- a/index.html
+++ b/index.html
@@ -132,14 +132,22 @@ function view_page(name){
 
 			<article id="contact">
 				<h2 class="title-section">Contact me</h2><br><br>
-				<form id="msg" method="post" action="mail.php">
-					<input class="input name" type="text" name="first" placeholder="Enter your First Name">
-					<input class="input name" type="text" name="last" placeholder="Enter your Last Name"><br>
-					<input class="input email" type="email" name="email" placeholder="Enter your E-mail"><br>
-					<input class="input email" type="text" name="object" placeholder="Enter the Object"><br><br>
-					<textarea class="area" name="message" form="msg" placeholder="Enter the Message" rows=5></textarea><br><br><br>
-					<button class="btn-sub" type="submit">Send Message</button>
-				</form>
+				<table class="media-container">
+					<tbody>
+						<tr>
+							<td class="media-image"><img class="media" src="./img/mail.png"></td>
+							<td class="media-text"><p>By email ademski@rocketmail.com</p></td>
+						</tr>
+						<tr>
+							<td class="media-image"><img class="media" src="./img/linkedin.png"></td>
+							<td class="media-text"><p>By my <a href="https://www.linkedin.com/in/alexandra-demski-0356a719a/">Linkedin profile</a></p></td>
+						</tr>
+						<tr>
+							<td class="media-image"><img class="media" src="./img/github.png"></td>
+							<td class="media-text"><p>Go see my <a href="https://github.com/Felween">Github Deposit</a></p></td>
+						</tr>
+					</tbody>
+				</table>
 			</article>
 
 		</section>
@@ -148,8 +156,8 @@ function view_page(name){
 	<footer>
 		<p class="rights">
 			© Imagined and created by Alexandra Demski, all rights reserved<br>
-			The illustrations were downloaded from absurd.design<br>
-			Icon made by Pixelmeetup from www.flaticon.com<br><br>
+			The illustrations were downloaded from <a href="https://absurd.design/">absurd.design</a><br>
+			Icon made by <a href="https://www.flaticon.com/authors/pixelmeetup">Pixelmeetup</a> and Social Media Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a><br>
 
 			Created the 20th December 2019<br>
 			Last update the 30th July 2020
