--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@ function view_page(name){
 				<table class="media-container">
 					<tbody>
 						<tr>
-							<td class="media-image"><img class="media" src="./img/mail.png"></td>
+							<td class="media-image"><img class="media" src="/img/mail.png"></td>
 							<td class="media-text"><p>By email ademski@rocketmail.com</p></td>
 						</tr>
 						<tr>
-							<td class="media-image"><img class="media" src="./img/linkedin.png"></td>
+							<td class="media-image"><img class="media" src="/img/linkedin.png"></td>
 							<td class="media-text"><p>By my <a href="https://www.linkedin.com/in/alexandra-demski-0356a719a/">Linkedin profile</a></p></td>
 						</tr>
 						<tr>
-							<td class="media-image"><img class="media" src="./img/github.png"></td>
+							<td class="media-image"><img class="media" src="/img/github.png"></td>
 							<td class="media-text"><p>Go see my <a href="https://github.com/Felween">Github Deposit</a></p></td>
 						</tr>
 					</tbody>
