--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@ function view_page(name){
 						</tr>
 						<tr>
 							<td class="media-image"><img class="media" src="/img/linkedin.png"></td>
-							<td class="media-text"><p>By my <a href="https://www.linkedin.com/in/alexandra-demski-0356a719a/">Linkedin profile</a></p></td>
+							<td class="media-text"><p>By my <a href="https://www.linkedin.com/in/alexandra-demski-0356a719a/" target="_blank">Linkedin profile</a></p></td>
 						</tr>
 						<tr>
 							<td class="media-image"><img class="media" src="/img/github.png"></td>
-							<td class="media-text"><p>Go see my <a href="https://github.com/Felween">Github Deposit</a></p></td>
+							<td class="media-text"><p>Go see my <a href="https://github.com/Felween" target="_blank">Github Deposit</a></p></td>
 						</tr>
 					</tbody>
 				</table>
