--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/><!--devices-->
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 		<link rel="stylesheet" href="./common.css"/>
-		<link rel="stylesheet" media="screen and (min-device-width:320px) and (max-device-width: 767px)" href="phone.css" />
-		<link rel="stylesheet" media="screen and (min-device-width: 768px)" href="other.css" />
+		<link rel="stylesheet" media="screen and (min-device-width:320px) and (max-device-width: 767px)" href="./phone.css" />
+		<link rel="stylesheet" media="screen and (min-device-width: 768px)" href="./other.css" />
 		<link rel="shortcut icon" href="./img/favicon.ico"/>
 	<title>Felween</title>
 </head>
