--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ function view_page(name){
 			<article id="contact">
 				<h2 class="title-section">Contact me</h2>
 				<div class="contact-article">
-					<div class="tag-contact"><img class="ctc-img" src="./img/linkedin.png" alt="linkedin"><p><a href="">Linkedin Profile</a></p></div>
-					<div class="tag-contact"><img class="ctc-img" src="./img/mail.png" alt="mail"><p>mymail@mail.com</p></div>
+					<div class="tag-contact"><img class="ctc-img" src="./img/linked.png" alt="linkedin"><p><a href="">Linkedin Profile</a></p></div>
+					<div class="tag-contact"><img class="ctc-img" src="./img/email.png" alt="mail"><p>mymail@mail.com</p></div>
 					<div class="tag-contact"><img class="ctc-img" src="./img/phone.png" alt="phone"><p>01.01.01.01.01</p></div>
 				</div>
 			</article>
